Added xtra constructor to PathWalker